// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  alignItems="center"
  className="coral coral-viewerBox"
  wrap={true}
>
  <Localized
    id="general-userBoxUnauthenticated-joinTheConversation"
  >
    <span
      className="UserBoxUnauthenticated-joinText"
    >
      Join the conversation
    </span>
  </Localized>
  <div
    className="UserBoxUnauthenticated-actions"
  >
    <Localized
      id="general-userBoxUnauthenticated-register"
    >
      <withPropsOnChange(Button)
        className="UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
        color="primary"
        fontSize="extraSmall"
        onClick={[Function]}
        paddingSize="extraSmall"
        upperCase={true}
        variant="filled"
      >
        Register
      </withPropsOnChange(Button)>
    </Localized>
    <Localized
      id="general-userBoxUnauthenticated-signIn"
    >
      <withPropsOnChange(Button)
        className="coral coral-viewerBox-signInButton"
        color="primary"
        fontSize="extraSmall"
        onClick={[Function]}
        paddingSize="extraSmall"
        upperCase={true}
        variant="outlined"
      >
        Sign in
      </withPropsOnChange(Button)>
    </Localized>
  </div>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly hides showRegisterButton 1`] = `
<ForwardRef(forwardRef)
  alignItems="center"
  className="coral coral-viewerBox"
  wrap={true}
>
  <Localized
    id="general-userBoxUnauthenticated-joinTheConversation"
  >
    <span
      className="UserBoxUnauthenticated-joinText"
    >
      Join the conversation
    </span>
  </Localized>
  <div
    className="UserBoxUnauthenticated-actions"
  >
    <Localized
      id="general-userBoxUnauthenticated-signIn"
    >
      <withPropsOnChange(Button)
        className="coral coral-viewerBox-signInButton"
        color="primary"
        fontSize="extraSmall"
        onClick={[Function]}
        paddingSize="extraSmall"
        upperCase={true}
        variant="outlined"
      >
        Sign in
      </withPropsOnChange(Button)>
    </Localized>
  </div>
</ForwardRef(forwardRef)>
`;
